# microcontrollers

./: .gitignore  Makefile.sample  README.md  godbolt-compiler-setup.txt  start.sh  transfer.sh
acc/: Makefile  acc_main.c
communicator/: CMakeLists.txt  main.cpp
dma/: Makefile  dma_main.c
gietar-hiero/: Makefile  README.md  board.txt  board.xcf  extract_bmp.py  game.c  game.h  generate_song.py  gietar_hiero_main.c  note.txt  note.xcf  note_lengths.txt  song.txt  speaker.c  speaker.h
labtest/: CMakeLists.txt  labtest  main.c
leds_main/: Makefile  README.md  leds_main.c
lib/include/: buttons.h  dma_uart.h  keyboard.h  lcd.h  leds.h  messages.h  uart_init.h
lib/src/: buttons.c  dma_uart.c  keyboard.c  lcd.c  leds.c  messages.c  uart_init.c
uart/: .minirc.dfl  Makefile  README.md  button_int_notes.c  msgbuftest.c  uart_main.c
